refactor: dto 변환 후처리 생략하고 처음부터 dto가 담긴 리스트로 시작